# health-data-loader

./: .gitignore  CLAUDE_SETUP.md  CONTRIBUTING.md  LICENSE  README-MCP.md  README.md  claude_desktop_config.json  claude_desktop_config_alternative.json  claude_desktop_config_fixed.json  data_loader.py  data_transformers.py  database.py  health_pipeline.py  health_queries.py  mcp_health_server.py  pyproject.toml  requirements-mcp.txt  requirements.txt  run_mcp_server.sh  setup_mcp_server.py  simple_loader.py  test_mcp_server.py  xml_parser.py
health_data/: .gitkeep  README.md
